Wolf aggro targets is now mutable